--- a/site/package.json
+++ b/site/package.json
@@ -13,6 +13,7 @@
     "@astrojs/image": "^0.16.5",
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.2.1",
+    "astro-icon": "^0.8.0",
     "tailwindcss": "^3.3.1"
   }
 }
