--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,12 +15,12 @@ services:
   
   astro:
     build: 
-      context: ./astro
-      dockerfile: ./astro/dev.Dockerfile
+      context: ./site
+      dockerfile: ./site/dev.Dockerfile
     env_file: .env
     container_name: cg3_site
     restart: always
     ports:
       - 3000:3000
     volumes:
-      - ./astro:/app
+      - ./astro/src:/app/src
