--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,7 +4,7 @@ services:
   api:
     build: 
       context: ./server
-      dockerfile: ./server/dev.Dockerfile
+      dockerfile: dev.Dockerfile
     env_file: .env
     container_name: cg3_web_api
     restart: always
@@ -16,7 +16,7 @@ services:
   astro:
     build: 
       context: ./site
-      dockerfile: ./site/dev.Dockerfile
+      dockerfile: /dev.Dockerfile
     env_file: .env
     container_name: cg3_site
     restart: always
