--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,25 +2,30 @@ version: "3.9"
 
 services:
   api:
+    container_name: cg3_web_api
     build: 
       context: ./server
       dockerfile: dev.Dockerfile
     env_file: .env
-    container_name: cg3_web_api
-    restart: always
+    restart: unless-stopped
     ports:
       - 8080:8080
     volumes:
       - ./server:/app
+    environment:
+      CHOKIDAR_USE_POLLING: "true"
   
   astro:
+    container_name: cg3_site
     build: 
       context: ./site
-      dockerfile: /dev.Dockerfile
+      dockerfile: dev.Dockerfile
     env_file: .env
-    container_name: cg3_site
-    restart: always
+    restart: unless-stopped
     ports:
       - 3000:3000
     volumes:
-      - ./astro/src:/app/src
+      - ./site:/app
+      - ./site/src:/app/src
+    environment:
+      CHOKIDAR_USE_POLLING: "true"
