--- a/site/package.json
+++ b/site/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/image": "^0.16.5",
     "@astrojs/tailwind": "^3.1.1",
+    "@tailwindcss/forms": "^0.5.3",
     "astro": "^2.2.1",
     "astro-icon": "^0.8.0",
     "tailwindcss": "^3.3.1"
