--- a/site/package.json
+++ b/site/package.json
@@ -16,5 +16,8 @@
     "astro": "^2.2.1",
     "astro-icon": "^0.8.0",
     "tailwindcss": "^3.3.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
