--- a/site/package.json
+++ b/site/package.json
@@ -15,9 +15,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "astro": "^2.2.1",
     "astro-icon": "^0.8.0",
-    "tailwindcss": "^3.3.1"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
+    "tailwindcss": "^3.3.1",
+    "yup": "^1.1.1"
   }
 }
