--- a/site/package.json
+++ b/site/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@astrojs/image": "^0.16.5",
     "@astrojs/tailwind": "^3.1.1",
+    "@astrojs/vercel": "^3.2.4",
     "@tailwindcss/forms": "^0.5.3",
-    "astro": "^2.2.1",
+    "astro": "^2.3.0",
     "astro-icon": "^0.8.0",
     "tailwindcss": "^3.3.1",
     "yup": "^1.1.1"
