Renamed folders, added build steps, fixed Fame rank displayg

--- a/server/Makefile
+++ b/server/Makefile
@@ -5,8 +5,10 @@ build_dependencies:
 	go install github.com/josephspurrier/goversioninfo/cmd/goversioninfo@latest
 
 windows:
-	goversioninfo build/versioninfo.json
-	env GOOS=windows GOARCH=amd64 go build -o build/cg3-site-server.exe
+	~/go/bin/goversioninfo build/versioninfo.json
+	cp config.toml dist/
+	cp -r db dist/
+	env GOOS=windows GOARCH=amd64 go build -o dist/cg3-site-server.exe
 
 linux:
-	env GOOS=linux GOARCH=amd64 go build -o build/cg3-site-server
+	env GOOS=linux GOARCH=amd64 go build -o dist/cg3-site-server
