--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,12 +9,13 @@ services:
     env_file: .env
     restart: unless-stopped
     ports:
-      - 8081:8081
+      - 9090:9090
     volumes:
       - ./server:/cg3-web-server
     environment:
       CHOKIDAR_USE_POLLING: false
-      PORT: 8081
+    networks:
+      - cg3-network
   
   astro:
     container_name: cg3_site
@@ -32,4 +33,10 @@ services:
       - ./site/astro.config.mjs:/cg3-site/astro.config.mjs
     environment:
       CHOKIDAR_USE_POLLING: false
+      SERVER_URL: http://cg3_web_api:9090
       PORT: 3000
+    networks:
+      - cg3-network
+
+networks:
+  cg3-network:
