--- a/site/package.json
+++ b/site/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^3.1.1",
     "@astrojs/vercel": "^3.2.4",
     "@tailwindcss/forms": "^0.5.3",
+    "@vercel/analytics": "^0.1.11",
     "astro": "^2.3.0",
     "astro-icon": "^0.8.0",
     "tailwindcss": "^3.3.1",
