--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
     "@vercel/analytics": "^0.1.11",
     "astro": "^2.3.0",
     "astro-icon": "^0.8.0",
+    "sass": "^1.62.0",
     "tailwindcss": "^3.3.1",
     "yup": "^1.1.1"
   }
