--- a/site/package.json
+++ b/site/package.json
@@ -13,11 +13,14 @@
     "@astrojs/image": "^0.16.5",
     "@astrojs/tailwind": "^3.1.1",
     "@astrojs/vercel": "^3.2.4",
+    "@grpc/grpc-js": "^1.8.14",
+    "@grpc/proto-loader": "^0.7.6",
     "@tailwindcss/forms": "^0.5.3",
     "@vercel/analytics": "^0.1.11",
     "astro": "^2.3.0",
     "astro-icon": "^0.8.0",
     "astro-spa": "^1.3.9",
+    "google-protobuf": "^3.21.2",
     "sass": "^1.62.0",
     "tailwindcss": "^3.3.1",
     "yup": "^1.1.1"
