--- a/next/package.json
+++ b/next/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.14",
     "@grpc/proto-loader": "^0.7.7",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -24,6 +25,9 @@
     "react": "18.2.0",
     "react-div-100vh": "^0.7.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
+    "react-fast-marquee": "^1.5.2",
+    "react-hook-form": "^7.43.9",
     "react-intl": "^6.4.2",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
@@ -34,6 +38,7 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.0",
     "@testing-library/react": "^14.0.0",
     "sass": "^1.62.1"
   }
