--- a/next/package.json
+++ b/next/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.14",
     "@grpc/proto-loader": "^0.7.7",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
@@ -19,13 +22,14 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "framer-motion": "^10.12.12",
     "google-protobuf": "^3.21.2",
+    "gray-matter": "^4.0.3",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-div-100vh": "^0.7.0",
     "react-dom": "18.2.0",
-    "react-draggable": "^4.4.5",
     "react-fast-marquee": "^1.5.2",
     "react-hook-form": "^7.43.9",
     "react-intl": "^6.4.2",
@@ -39,7 +43,9 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.0",
+    "@tailwindcss/typography": "github:tailwindcss/typography",
     "@testing-library/react": "^14.0.0",
+    "markdown-to-jsx": "^7.2.0",
     "sass": "^1.62.1"
   }
 }
