--- a/next/package.json
+++ b/next/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "@xstate/react": "^3.2.2",
+    "ani-cursor": "^0.0.5",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
